--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Bienvenidos</h1>
             <p>Esta es la pagina oficial de nombre</p>
             <p>Aqui encontraras variedad de nft generados por IA</p>
-           <div id="cate"><a href="file:///C:/Users/Pc/OneDrive/Escritorio/Proyectos-VSC/web%20a/category.html"> <p>Categorias</p></a></div>
+           <div id="cate"><a href="categorias.html"> <p>Categorias</p></a></div>
         </main>
     </body>
 </html>
