--- a/categorias.html
+++ b/categorias.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html long es>
-    <head>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
+<head>
 
     </head>
     <body>
         <main>
             <h2>chicas:</h2>
-                <a href="#"><p>categoria1</p></a>
-                <a href="#"><p>categoria2</p></a>
-                <a href="#"><p>categoria3</p></a>
-                <a href="#"><p>categoria4</p></a>
-                <a href="#"><p>categoria5</p></a>
+                <a href="#"><p>Chicas anime</p></a>
+                <a href="#"><p>Chicas imagineV1</p></a>
+                <a href="#"><p>Chicas realistas</p></a>
+                <a href="#"><p>Chicas cartoon</p></a>
+                <a href="#"><p>Chicas anime V2</p></a>
             <h2>chicos:</h2>
                 <a href="#"><p>categoria1</p></a>
                 <a href="#"><p>categoria2</p></a>
