--- a/categorias.html
+++ b/categorias.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html long es>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styleC.css">
 <head>
 
     </head>
