--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
         <link href="category.html">
     </head>
     <body>
+        <div><div class="contenedor">
         <main>
             <h1>Bienvenidos</h1>
             <p>Esta es la pagina oficial de nombre</p>
             <p>Aqui encontraras variedad de nft generados por IA</p>
-           <div id="cate"><a href="categorias.html"> <p>Categorias</p></a></div>
+           <div 
+           style="background-color: aquamarine;
+            text-transform: uppercase;"
+        
+           id="cate"><a href="categorias.html"> <p>Categorias</p></a></div>
         </main>
+    </div>
     </body>
 </html>
