mejora de fondo y centrado

--- a/categorias.html
+++ b/categorias.html
@@ -4,7 +4,7 @@
 <head>
 
     </head>
-    <body>
+    <body> <div class="contenedor">
         <main>
             <h2>chicas:</h2>
                 <a href="#"><p>Chicas anime</p></a>
@@ -18,7 +18,9 @@
                 <a href="#"><p>categoria3</p></a>
                 <a href="#"><p>categoria4</p></a>
                 <a href="#"><p>categoria5</p></a>
+           
         </main>
-    </body>
+    </div>
+</body>
 
 </html>
