cambiado el Chicos

--- a/categorias.html
+++ b/categorias.html
@@ -13,11 +13,11 @@
                 <a href="#"><p>Chicas cartoon</p></a>
                 <a href="#"><p>Chicas anime V2</p></a>
             <h2>chicos:</h2>
-                <a href="#"><p>categoria1</p></a>
-                <a href="#"><p>categoria2</p></a>
-                <a href="#"><p>categoria3</p></a>
-                <a href="#"><p>categoria4</p></a>
-                <a href="#"><p>categoria5</p></a>
+                <a href="#"><p>Chicos anime</p></a>
+                <a href="#"><p>chicos imagineV1</p></a>
+                <a href="#"><p>Chicos realistas</p></a>
+                <a href="#"><p>Chicos cartoon</p></a>
+                <a href="#"><p>Chicos anime v2</p></a>
            
         </main>
     </div>
