--- a/categorias.html
+++ b/categorias.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html long es>
     <link rel="stylesheet" href="styleC.css">
+    <!--esto de arriba te funciona??-->
 <head>
-
+    <link href="categorias/ChicasAnime.html">
     </head>
     <body> <div class="contenedor">
         <main>
             <h2>chicas:</h2>
-                <a href="#"><p>Chicas anime</p></a>
+                <a href="categorias/ChicasAnime.html"><p>Chicas anime</p></a>
                 <a href="#"><p>Chicas imagineV1</p></a>
                 <a href="#"><p>Chicas realistas</p></a>
                 <a href="#"><p>Chicas cartoon</p></a>
