--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html long es>
+<html lang es>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <head>
         <link href="category.html">
