--- a/categorias.html
+++ b/categorias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html long es>
+<html lang es>
     <link rel="stylesheet" href="styleC.css">
     <!--esto de arriba te funciona??-->
 <head>
