--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            style="background-color: aquamarine;
             text-transform: uppercase;"
         
-           id="cate"><a href="categorias.html"> <p>Categorias</p></a></div>
+           id="cate"><a href="categorias.html"> <h4>Categorias</h4></a></div>
         </main>
     </div>
     </body>
