--- a/categorias.html
+++ b/categorias.html
@@ -9,10 +9,10 @@
         <main>
             <h2>chicas:</h2>
                 <a href="categorias/ChicasAnime.html"><p>Chicas anime</p></a>
-                <a href="#"><p>Chicas imagineV1</p></a>
-                <a href="#"><p>Chicas realistas</p></a>
-                <a href="#"><p>Chicas cartoon</p></a>
-                <a href="#"><p>Chicas anime V2</p></a>
+                <a href="categorias/chicas imaginev1.html"><p>Chicas imagineV1</p></a>
+                <a href="categorias/chicas realistas.html"><p>Chicas realistas</p></a>
+                <a href="categorias/chicas cartoon.html"><p>Chicas cartoon</p></a>
+                <a href="categorias/chicas animev2.html"><p>Chicas anime V2</p></a>
             <h2>chicos:</h2>
                 <a href="#"><p>Chicos anime</p></a>
                 <a href="#"><p>chicos imagineV1</p></a>
