--- a/categorias.html
+++ b/categorias.html
@@ -14,11 +14,11 @@
                 <a href="categorias/chicas cartoon.html"><p>Chicas cartoon</p></a>
                 <a href="categorias/chicas animev2.html"><p>Chicas anime V2</p></a>
             <h2>chicos:</h2>
-                <a href="#"><p>Chicos anime</p></a>
-                <a href="#"><p>chicos imagineV1</p></a>
-                <a href="#"><p>Chicos realistas</p></a>
-                <a href="#"><p>Chicos cartoon</p></a>
-                <a href="#"><p>Chicos anime v2</p></a>
+                <a href="categorias/chicos anime.html"><p>Chicos anime</p></a>
+                <a href="categorias/chicos imaginev1.html"><p>chicos imagineV1</p></a>
+                <a href="categorias/chicos realistas.html"><p>Chicos realistas</p></a>
+                <a href="categorias/chicos cartoon.html"><p>Chicos cartoon</p></a>
+                <a href="categorias/chicos animev2.html"><p>Chicos anime v2</p></a>
            
         </main>
     </div>
