--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div><div class="contenedor">
         <main>
-            <h1>Bienvenidos</h1>
+            <center><h1 id="bien">Bienvenidos</h1></center>
             <p>Esta es la pagina oficial de nombre</p>
             <p>Aqui encontraras variedad de nft generados por IA</p>
            <div 
