--- a/categorias/chicas animev2.html
+++ b/categorias/chicas animev2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>CHICAS ANIME V2</title>
+    <link href="styleB.css" rel="stylesheet">
 </head>
 <body>
     <main>
