--- a/categorias/chicas animev2.html
+++ b/categorias/chicas animev2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link  rel="stylesheet" href="styleB.css">
+    <link  rel="stylesheet" href="styl">
 <head>
     <title>CHICAS ANIME V2</title>
-    
+    <link rel="stylesheet" href="styleB.css">
 </head>
 <body>
     <main>
