--- a/categorias/chicas animev2.html
+++ b/categorias/chicas animev2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang es>
 <head>
     <title>CHICAS ANIME V2</title>
     <link rel="stylesheet" href="styleB.css">
