--- a/categorias/chicas animev2.html
+++ b/categorias/chicas animev2.html
@@ -2,7 +2,7 @@
 <html lang es>
 <head>
     <title>CHICAS ANIME V2</title>
-    <link rel="stylesheet" href="styleB.css">
+    <link rel="stylesheet" href="styleC.css">
 </head>
 <body>
     <main>
