--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <body>
         <div><div class="contenedor">
         <main>
-            <center><h1 id="bien">Bienvenidos</h1></center>
+            <h1 align="center" id="bien">Bienvenidos</h1>
             <p>Esta es la pagina oficial de nombre</p>
             <p>Aqui encontraras variedad de nft generados por IA</p>
            <div 
-           style="background-color: aquamarine;
-            text-transform: uppercase;"
-        
-           id="cate"><a href="categorias.html"> <center><h4>Categorias</h4></center></a></div>
-        </main>
-    </div>
+id="cate"><a style="color:rgb(0, 0, 0); background-color:rgba(238, 12, 12, 0.74); " href="categorias.html"> 
+                        <h4 align="center">categorias</h4>
+                    </a>
+                </div>
+            </main>
+        </div>
     </body>
 </html>
